# FaceRecognizer

./: CMakeLists.txt  README.md  main_facecollector.cpp  main_facerecognizer.cpp  main_facerecognizer_with_tracking.cpp
src/: box_tracker.cpp  box_tracker.h  face.h  face_detector.cpp  face_detector.h  face_extractor.cpp  face_extractor.h  math.cpp  math.h  renderer.cpp  renderer.h
